# claimify

./: .gitignore  AGENTS.md  Makefile  README.md  TASKS.md  claim_01_missing_rendering_npi.txt  claim_03_arithmetic_mismatch.txt  claim_04_ncci_unbundling_missing_mod25.txt  claim_05_non_specific_deleted_icd10.txt  claim_08_invalid_diagnosis_pointer.txt  claim_10_missing_billing_provider_address.txt  docker-compose.yml  package.json  railway.json
.playwright-mcp/: page-2026-07-18T22-50-11-614Z.yml  page-2026-07-18T22-50-16-214Z.yml  page-2026-07-18T22-50-39-501Z.yml  page-2026-07-18T22-51-36-407Z.yml  page-2026-07-18T22-51-50-688Z.yml
backend/: .env.example  Dockerfile  pyproject.toml  render.yaml
backend/app/: config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/app/ai/: anthropic_provider.py  base.py  factory.py  mock.py  openai_provider.py  prompts.py
backend/app/repositories/: findings.py  patients.py
backend/app/services/: demo.py  reviews.py
backend/tests/: conftest.py  test_demo.py  test_health.py  test_mock_ai.py  test_patients.py  test_reviews.py
demo-data/: 837p-mismatch-age-procedure.json  837p-mismatch-diagnosis-procedure.json  837p-mismatch-frequency-duplicate.json  837p-mismatch-gender-diagnosis.json  837p-mismatch-gender-procedure.json  837p-mismatch-global-period-modifier.json  837p-mismatch-laterality.json  837p-mismatch-medical-necessity-lcd.json  837p-mismatch-mue-unit-excess.json  837p-mismatch-mutually-exclusive.json  837p-mismatch-ncci-unbundling.json  837p-mismatch-place-of-service.json  837p-sample-1.json
(+112 files in other folders)
