[project]
name = "careflow-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic-settings>=2.10,<3",
  "httpx>=0.28,<1",
]

[dependency-groups]
dev = ["pytest>=8.4,<9", "ruff>=0.12,<1"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

